Try to fix the liberapay address

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -6,7 +6,7 @@
 #ko_fi: # Replace with a single Ko-fi username
 #tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 #community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
-liberapay: foundation@krita.org # Replace with a single Liberapay username
+liberapay: Krita # Replace with a single Liberapay username
 #issuehunt: # Replace with a single IssueHunt username
 #otechie: # Replace with a single Otechie username
 custom: ['https://krita.org/en/support-us/donations/', 'https://kde.org/donations'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
