--- a/krita/data/CMakeLists.txt
+++ b/krita/data/CMakeLists.txt
@@ -16,6 +16,8 @@ add_subdirectory( symbols )
 add_subdirectory( preset_icons )
 add_subdirectory( metadata/schemas )
 add_subdirectory( gamutmasks )
+add_subdirectory( donation )
+
 
 ########### install files ###############
 
