Android: Remove a duplicate asset.
Contents of `assets/share` and `assets` were same, except
the hidden folders were missing in the prior. So, we couldn't
it, hence it has been removed. This reduces size of apk by
about ~45M.

--- a/packaging/android/apk/build.gradle
+++ b/packaging/android/apk/build.gradle
@@ -60,10 +60,23 @@ task copyLibs(type: Copy) {
     rename ('^krita(.*).so$', 'lib_krita$1.so')
 }
 
+/*
+ * androiddeployqt doesn't fully copy the directories. Hidden directories
+ * to be specific. That's why we copy manually and then delete the partial
+ * one it creates
+ */
 task copyAssets(type: Copy) {
     from "$installPrefix/share/"
     into 'assets/'
     include '**'
+}
+
+/*
+ * Remove "share" folder in assets. It is copied both manually and by
+ * androiddeployqt(reason in copyAssets task).
+ */
+task removeDuplicateAssets(type: Delete) {
+    delete "assets/share"
 }
 
 copyLibs.dependsOn configure
@@ -113,4 +126,5 @@ android {
 
     preBuild.dependsOn(copyLibs)
     preBuild.dependsOn(copyAssets)
+    preBuild.dependsOn(removeDuplicateAssets)
 }
