--- a/libs/pigment/CMakeLists.txt
+++ b/libs/pigment/CMakeLists.txt
@@ -26,7 +26,7 @@ if(HAVE_VC)
     include_directories(SYSTEM ${Vc_INCLUDE_DIR})
     set(LINK_VC_LIB ${Vc_LIBRARIES})
     ko_compile_for_all_implementations_no_scalar(__per_arch_factory_objs compositeops/KoOptimizedCompositeOpFactoryPerArch.cpp)
-
+    ko_compile_for_all_implementations(__per_arch_alpha_applicator_factory_objs KoAlphaMaskApplicatorFactory.cpp)
     message("Following objects are generated from the per-arch lib")
     message("${__per_arch_factory_objs}")
 endif()
@@ -37,6 +37,7 @@ add_subdirectory(benchmarks)
 set(kritapigment_SRCS
     DebugPigment.cpp
     KoBasicHistogramProducers.cpp
+    KoAlphaMaskApplicatorBase.cpp
     KoColor.cpp
     KoColorDisplayRendererInterface.cpp
     KoColorConversionAlphaTransformation.cpp
@@ -76,6 +77,7 @@ set(kritapigment_SRCS
     compositeops/KoOptimizedCompositeOpFactoryPerArch_Scalar.cpp
     compositeops/KoAlphaDarkenParamsWrapper.cpp
     ${__per_arch_factory_objs}
+    ${__per_arch_alpha_applicator_factory_objs}
     colorprofiles/KoDummyColorProfile.cpp
     resources/KoAbstractGradient.cpp
     resources/KoColorSet.cpp
