--- a/packaging/android/apk/AndroidManifest.xml
+++ b/packaging/android/apk/AndroidManifest.xml
@@ -88,6 +88,10 @@
 
     <uses-feature android:glEsVersion="0x00030000" android:required="true" />
 
+    <uses-feature
+	    android:name="android.hardware.type.pc"
+	    android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
