Timeline Docker Redux: Scrollbar Realignemnt and Zoom Feat.
This patch gives the timline docker the ability to zoom while scrolling.
It also improves some of the behavior regarding the infinite scroll by
adding an overscroll signal and overriding some of the default scrollbar
input handling. It also realigns the scrollbar to account for the header
offsets.

This should help timeline navigation and UI/UX problems. It will also
stop users from getting stuck while trying to scroll.

This can eventually be reused in the curves docker too...

--- a/libs/widgetutils/CMakeLists.txt
+++ b/libs/widgetutils/CMakeLists.txt
@@ -35,6 +35,7 @@ set(kritawidgetutils_LIB_SRCS
     kis_int_parse_spin_box.cpp
     kis_num_parser.cpp
     kis_slider_spin_box.cpp
+    kis_zoom_scrollbar.cpp
     kis_spin_box_unit_manager.cpp
 
     config/kcolorscheme.cpp
