Use Google Play Inapp-billing for donations on Android&ChromeOS
# Conflicts:
#	libs/ui/KisWelcomePageWidget.cpp
#	libs/ui/KisWelcomePageWidget.h

(cherry picked from commit 32d7b773a76fe52d160cc1e0c2714130dde13b69)

--- a/packaging/android/apk/build.gradle
+++ b/packaging/android/apk/build.gradle
@@ -136,3 +136,8 @@ android {
     preBuild.dependsOn(copyAssets)
     preBuild.dependsOn(removeDuplicateAssets)
 }
+
+dependencies {
+    implementation 'com.android.billingclient:billing:2.2.0'
+}
+
