Add small test for KoZoomAction
Before this commit, KoZoomAction class didn't have any tests for itself.
This commit adds a very small, easy test.
(I `just needed it to check something, it should be expanded to be a real
test, for now it checks very basic functionality).

(cherry picked from commit fe4d08407690dafac7d84b37b65dcbcb8824a0ec)

--- a/libs/widgets/tests/CMakeLists.txt
+++ b/libs/widgets/tests/CMakeLists.txt
@@ -13,5 +13,6 @@ ecm_add_tests(
     zoomcontroller_test.cpp
     KoResourceTaggingTest.cpp
     KoAnchorSelectionWidgetTest.cpp
+    TestKoZoomAction.cpp
     NAME_PREFIX "libs-widgets-"
     LINK_LIBRARIES kritawidgets Qt5::Test)
