Add small test for KoZoomAction
Before this commit, KoZoomAction class didn't have any tests for itself.
This commit adds a very small, easy test.
(I `just needed it to check something, it should be expanded to be a real
test, for now it checks very basic functionality).

--- a/libs/widgets/tests/CMakeLists.txt
+++ b/libs/widgets/tests/CMakeLists.txt
@@ -12,5 +12,6 @@ ecm_add_tests(
     zoomhandler_test.cpp
     zoomcontroller_test.cpp
     KoAnchorSelectionWidgetTest.cpp
+    TestKoZoomAction.cpp
     NAME_PREFIX "libs-widgets-"
     LINK_LIBRARIES kritawidgets Qt5::Test)
