fix extenderModifiers for OSX
Keys other than modifiers cannot be accessed outside
of non key related events from NSApplication. adding
a local monitor allows to catch the keys we need
during the delay duration.

Try to handle all modifiers from localMonitor

Apply modifiers already pressed on focusIn events macos

We now request a copy of keydown and modifier change
events to set the proper flags as background application

BUG:372646
BUG:373299
BUG:391088
(cherry picked from commit 4b9fa0c85e8f4cf9412ad01dd073c4a83ac7ea67)

--- a/libs/ui/CMakeLists.txt
+++ b/libs/ui/CMakeLists.txt
@@ -466,6 +466,7 @@ endif()
 if(APPLE)
     set(kritaui_LIB_SRCS
         ${kritaui_LIB_SRCS}
+        input/kis_extended_modifiers_mapper_osx.mm
         osx.mm
     )
 endif()
