Move file thumbnails creation to a separate class
Before this commit, KisWelcomePageWidget would create file icons
(thumbnails) by its own. This commit moves the function to create them
to its own separate class so it can be reused.

--- a/libs/ui/CMakeLists.txt
+++ b/libs/ui/CMakeLists.txt
@@ -283,6 +283,8 @@ set(kritaui_LIB_SRCS
     utils/KisSpinBoxSplineUnitConverter.cpp
     utils/KisClipboardUtil.cpp
     utils/KisDitherUtil.cpp
+    utils/KisFileIconCreator.cpp
+
     input/kis_input_manager.cpp
     input/kis_input_manager_p.cpp
     input/kis_extended_modifiers_mapper.cpp
