macos: add file associations for some common types
This makes krita appear as recommended app for
jpg, png, tiff, psd, tga, heif, gif, pgm.

--- a/krita/Info.plist.template
+++ b/krita/Info.plist.template
@@ -77,6 +77,171 @@
         <key>CFBundleTypeRole</key>
         <string>Editor</string>
       </dict>
+      <dict>
+        <key>LSItemContentTypes</key>
+        <array>
+          <string>com.compuserve.gif</string>
+          <string>public.png</string>
+          <string>public.jpeg</string>
+          <string>public.tiff</string>
+        </array>
+        <key>CFBundleTypeName</key>
+        <string>common/formats</string>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
+    </dict>
+    <dict>
+          <key>CFBundleTypeExtensions</key>
+          <array>
+            <string>pgm</string>
+            <string>PGM</string>
+          </array>
+          <key>CFBundleTypeMIMETypes</key>
+          <array>
+              <string>image/x-portable-graymap</string>
+              <string>image/x-portable-greymap</string>
+              <string>image/x-portable-anymap</string>
+          </array>
+          <key>CFBundleTypeName</key>
+          <string>Netpbm grayscale image format </string>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>LSTypeIsPackage</key>
+          <integer>0</integer>
+      </dict>
+        <dict>
+            <key>CFBundleTypeExtensions</key>
+            <array>
+                  <string>psd</string>
+                  <string>PSD</string>
+            </array>
+            <key>CFBundleTypeMIMETypes</key>
+            <array>
+                  <string>image/vnd.adobe.photoshop</string>
+                  <string>application/x-photoshop</string>
+                  <string>application/photoshop</string>
+                  <string>application/psd</string>
+                  <string>image/psd</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>Photoshop Document</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
+        <dict>
+            <key>CFBundleTypeExtensions</key>
+            <array>
+                    <string>xcf</string>
+                    <string>XCF</string>
+            </array>
+            <key>CFBundleTypeMIMETypes</key>
+            <array>
+                    <string>image/x-xcf</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>GIMP Image</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
+        <dict>
+          <key>CFBundleTypeExtensions</key>
+          <array>
+                  <string>tga</string>
+                  <string>TGA</string>
+          </array>
+          <key>LSItemContentTypes</key>
+          <array>
+            <string>com.truevision.tga-image</string>
+          </array>
+          <key>CFBundleTypeName</key>
+          <string>Targa Image</string>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+        </dict>
+        <dict>
+            <key>CFBundleTypeExtensions</key>
+            <array>
+                    <string>gbr</string>
+                    <string>GBR</string>
+            </array>
+            <key>CFBundleTypeMIMETypes</key>
+            <array>
+                    <string>image/x-gimp-gbr</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>Gimp brush</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
+        <dict>
+            <key>CFBundleTypeMIMETypes</key>
+            <array>
+                <string>image/x-nikon-nef</string>
+                <string>image/x-canon-cr2</string>
+                <string>image/x-sony-sr2</string>
+                <string>image/x-canon-crw</string>
+                <string>image/x-pentax-pef</string>
+                <string>image/x-sigma-x3f</string>
+                <string>image/x-kodak-kdc</string>
+                <string>image/x-minolta-mrw</string>
+                <string>image/x-sony-arw</string>
+                <string>image/x-kodak-k25</string>
+                <string>image/x-kodak-dcr</string>
+                <string>image/x-olympus-orf</string>
+                <string>image/x-panasonic-raw</string>
+                <string>image/x-panasonic-raw2</string>
+                <string>image/x-fuji-raf</string>
+                <string>image/x-sony-srf</string>
+                <string>image/x-adobe-dng</string>
+                <string>image/tiff</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>Camera RAW</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
+        <dict>
+            <key>CFBundleTypeExtensions</key>
+            <array>
+                    <string>heif</string>
+                    <string>HEIF</string>
+                    <string>heic</string>
+                    <string>HEIC</string>
+            </array>
+            <key>CFBundleTypeMIMETypes</key>
+            <array>
+                    <string>image/heic</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>High Efficiency Image File Format</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
+        <dict>
+            <key>CFBundleTypeMIMETypes</key>
+            <array>
+                    <string>image/x-r16</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>Heightmap</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
+        <dict>
+            <key>CFBundleTypeExtensions</key>
+            <array>
+                    <string>pdf</string>
+                    <string>PDF</string>
+            </array>
+            <key>CFBundleTypeMIMETypes</key>
+            <array>
+                    <string>application/pdf</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>Portable Document Format</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
     </array>
   </dict>
 </plist>
