Simplify and add missing dependencies in Linux
- SeExpr doesn't currently need PyQt.
- libheif has trouble linking with libpng16 via pkg-config.
- GSL also needs shared libraries in mainline Linux.
- Add our own shipped libpng/tiff/jpeg, OpenJPEG and libheif to the appimage.

--- a/3rdparty/ext_seexpr/CMakeLists.txt
+++ b/3rdparty/ext_seexpr/CMakeLists.txt
@@ -7,5 +7,5 @@ ExternalProject_Add(
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_seexpr} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} -DBOOST_INCLUDE_DIR=${PREFIX_ext_seexpr}/include -DBOOST_ROOT=${PREFIX_ext_seexpr} -DBOOST_LIB_DIR=${PREFIX_ext_seexpr}/lib -DENABLE_LLVM_BACKEND=OFF -DENABLE_SSE4=OFF -DBUILD_DOC=OFF -DBUILD_TESTS=OFF -DBUILD_UTILS=OFF -DUSE_PYTHON=OFF
 
     UPDATE_COMMAND ""
-    DEPENDS ext_qt ext_pyqt
+    DEPENDS ext_qt
 )
