--- a/plugins/dockers/storyboarddocker/tests/CMakeLists.txt
+++ b/plugins/dockers/storyboarddocker/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ macro_add_unittest_definitions()
 ecm_add_test(
     storyboardModelTest.cpp 
     ../storyboardModel.cpp
+    ../commentModel.cpp
     ${CMAKE_SOURCE_DIR}/libs/ui/tests/modeltest.cpp
     TEST_NAME kritastoryboardmodeltest
     NAME_PREFIX "plugins-dockers-storyboarddocker-"
