--- a/packaging/android/apk/build.gradle
+++ b/packaging/android/apk/build.gradle
@@ -123,13 +123,13 @@ android {
     project.ext.versionCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
 
     def versionMajor    = 4
-    def versionMinor    = 9
-    def versionRelease  = 10
+    def versionMinor    = 3
+    def versionRelease  = 0
 
 	defaultConfig {
         targetSdkVersion 28
-        minSdkVersion 21
-        versionCode project.ext.versionCodes[abi] * 100000 + versionMajor * 1000 + versionMinor * 100 + versionRelease
+        minSdkVersion 23
+        versionCode project.ext.versionCodes[abi] * 1000000 + versionMajor * 10000 + versionMinor * 100 + versionRelease
     }
 
     preBuild.dependsOn(copyLibs)
