--- a/plugins/paintops/CMakeLists.txt
+++ b/plugins/paintops/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory( sketch )
 add_subdirectory( colorsmudge )
 add_subdirectory( roundmarker )
 add_subdirectory( tangentnormal )
+add_subdirectory( mypaint )
