Add SeExpr generator unit test
Ref T13097

--- a/plugins/generators/seexpr/CMakeLists.txt
+++ b/plugins/generators/seexpr/CMakeLists.txt
@@ -18,3 +18,5 @@ target_link_directories(kritaseexprgenerator PRIVATE ${SeExpr2_LIBRARY_DIRS})
 target_link_libraries(kritaseexprgenerator kritaui SeExpr2 SeExpr2Editor)
 
 install(TARGETS kritaseexprgenerator  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
+
+add_subdirectory(tests)
