--- a/3rdparty/ext_frameworks/CMakeLists.txt
+++ b/3rdparty/ext_frameworks/CMakeLists.txt
@@ -47,6 +47,23 @@ ExternalProject_Add(
     DEPENDS ext_extra_cmake_modules
 )
 
+ExternalProject_Add(
+    ext_karchive
+    DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
+   URL https://download.kde.org/stable/frameworks/5.64/karchive-5.64.0.zip
+    URL_MD5 26c7f89bfde97bc85f887f81a2d0f648
+    PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/karchive.diff
+    INSTALL_DIR ${EXTPREFIX_frameworks}
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_frameworks}
+               -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} 
+                ${GLOBAL_PROFILE}
+                -DCMAKE_SYSTEM_PREFIX_PATH=${EXTPREFIX} 
+                -DBUILD_TESTING=false
+    UPDATE_COMMAND ""
+    DEPENDS ext_extra_cmake_modules
+)
+
+
 
 ExternalProject_Add(
     ext_kwidgetsaddons
