Add a model to filter resources for active status and status of their storage
This means that KisResourceModel always shows all resources from
all storages, so the UI should use the KisResourcesActiveFilter
model to show only the active (or inactive) resources.

--- a/libs/resources/CMakeLists.txt
+++ b/libs/resources/CMakeLists.txt
@@ -10,7 +10,7 @@ set(kritaresources_LIB_SRCS
     KisResourceStorage.cpp
     KisResourceModel.cpp
     KisTagFilterResourceProxyModel.cpp
-    KisActiveFilterModel.cpp
+    KisResourcesActiveFilterModel.cpp
     KisResourceModelProvider.cpp
     KisResourceTypeModel.cpp
     KisStorageModel.cpp
