--- a/3rdparty/ext_frameworks/CMakeLists.txt
+++ b/3rdparty/ext_frameworks/CMakeLists.txt
@@ -50,7 +50,7 @@ ExternalProject_Add(
 ExternalProject_Add(
     ext_karchive
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-   URL https://download.kde.org/stable/frameworks/5.64/karchive-5.64.0.zip
+    URL https://download.kde.org/stable/frameworks/5.64/karchive-5.64.0.zip
     URL_MD5 26c7f89bfde97bc85f887f81a2d0f648
     PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/karchive.diff
     INSTALL_DIR ${EXTPREFIX_frameworks}
@@ -208,7 +208,7 @@ ExternalProject_Add(
                 -DCMAKE_SYSTEM_PREFIX_PATH=${EXTPREFIX} 
                 -DBUILD_TESTING=false
     UPDATE_COMMAND ""
-    DEPENDS ext_kitemviews
+    DEPENDS ext_karchive ext_kitemviews
 )
 
 ExternalProject_Add(
