--- a/3rdparty/ext_gsl/CMakeLists.txt
+++ b/3rdparty/ext_gsl/CMakeLists.txt
@@ -23,7 +23,7 @@ ExternalProject_Add( ext_gsl
     URL_MD5 7e0478f7c5e62696fef480b9a46f708c
 
     INSTALL_DIR ${EXTPREFIX_gsl}
-    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_gsl} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} -DBUILD_TESTING=OFF -DBUILD_SHARED_LIBS=ON
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_gsl} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} -DBUILD_TESTING=OFF
     UPDATE_COMMAND ""
 )
 
