Update SeExpr version
Fixes T13272

--- a/plugins/generators/seexpr/CMakeLists.txt
+++ b/plugins/generators/seexpr/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories(SYSTEM ${SeExpr2_INCLUDE_DIRS})
-
 set(kritaseexprgenerator_SOURCES
     SeExprVariable.cpp
     SeExprExpressionContext.cpp
@@ -14,8 +12,7 @@ ki18n_wrap_ui(kritaseexprgenerator_SOURCES
 
 add_library(kritaseexprgenerator MODULE ${kritaseexprgenerator_SOURCES})
 
-target_link_directories(kritaseexprgenerator PRIVATE ${SeExpr2_LIBRARY_DIRS})
-target_link_libraries(kritaseexprgenerator kritaui SeExpr2 SeExpr2Editor)
+target_link_libraries(kritaseexprgenerator kritaui SeExpr2::SeExpr2 SeExpr2::SeExpr2Editor)
 
 install(TARGETS kritaseexprgenerator  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
 
