Added KoCachedGradient for optimizing gradient textures (and gradient brushtips in the future).
Also made some changes to KisTextureProperties::apply() to make it easier to optimize in the future if necessary.
Performance of gradient textures is greatly improved with the cached gradient, so might not be necessary.

--- a/libs/pigment/CMakeLists.txt
+++ b/libs/pigment/CMakeLists.txt
@@ -92,6 +92,7 @@ set(kritapigment_SRCS
     resources/KoHashGeneratorProvider.cpp
     resources/KoStopGradient.cpp
     resources/KoSegmentGradient.cpp
+    resources/KoCachedGradient.h
 )
 
 set (EXTRA_LIBRARIES ${LINK_OPENEXR_LIB} ${LINK_VC_LIB})
