--- a/libs/global/CMakeLists.txt
+++ b/libs/global/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_subdirectory( tests )
+if(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
 
 include(CheckFunctionExists)
 check_function_exists(backtrace HAVE_BACKTRACE)
