--- a/plugins/extensions/qmic/CMakeLists.txt
+++ b/plugins/extensions/qmic/CMakeLists.txt
@@ -20,4 +20,6 @@ add_library(kritaqmic MODULE ${kritaqmic_SOURCES})
 target_link_libraries(kritaqmic kritaui)
 install(TARGETS kritaqmic  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
 
-add_subdirectory(tests)
+if(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
