--- a/libs/brush/CMakeLists.txt
+++ b/libs/brush/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_subdirectory( tests )
+if(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
 
 include_directories(SYSTEM
     ${EIGEN3_INCLUDE_DIR}
