Send SvgMeshGradient from SvgParser to KoMeshGradientBackground
Maniphest: T13101

# Conflicts:
#	libs/flake/CMakeLists.txt

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -76,6 +76,7 @@ set(kritaflake_SRCS
     KoShapeBackground.cpp
     KoColorBackground.cpp
     KoGradientBackground.cpp
+    KoMeshGradientBackground.cpp
     KoHatchBackground.cpp
     KoPatternBackground.cpp
     KoVectorPatternBackground.cpp
