Modify unittests and make changes in models based on tests
Ref T12819

--- a/plugins/dockers/storyboarddocker/tests/CMakeLists.txt
+++ b/plugins/dockers/storyboarddocker/tests/CMakeLists.txt
@@ -6,13 +6,12 @@ include_directories(
     ${CMAKE_CURRENT_BINARY_DIR}/..
 )
 
+include(ECMAddTests)
+
 macro_add_unittest_definitions()
 
 ecm_add_test(
-    storyboardModelTest.cpp 
-    ../storyboardModel.cpp
-    ../commentModel.cpp
-    ${CMAKE_SOURCE_DIR}/libs/ui/tests/modeltest.cpp
+    storyboardModelTest.cpp
     TEST_NAME kritastoryboardmodeltest
     NAME_PREFIX "plugins-dockers-storyboarddocker-"
     LINK_LIBRARIES kritastoryboarddocker kritaui Qt5::Test
