--- a/plugins/paintops/CMakeLists.txt
+++ b/plugins/paintops/CMakeLists.txt
@@ -16,4 +16,7 @@ add_subdirectory( sketch )
 add_subdirectory( colorsmudge )
 add_subdirectory( roundmarker )
 add_subdirectory( tangentnormal )
-add_subdirectory( mypaint )
+
+if(LIBMYPAINT_FOUND)
+    add_subdirectory( mypaint )
+endif()
