--- a/plugins/impex/qimageio/krita_qimageio.desktop
+++ b/plugins/impex/qimageio/krita_qimageio.desktop
@@ -64,7 +64,7 @@ Name[x-test]=xxKritaxx
 Name[zh_CN]=Krita
 Name[zh_TW]=Krita
 Exec=krita %F
-MimeType=image/bmp;image/x-xpixmap;image/x-xbitmap;image/webp;image/vnd.microsoft.icon;image/x-portable-pixmap;image/x-portable-graymap;image/x-portable-bitmap;
+MimeType=image/bmp;image/x-xpixmap;image/x-xbitmap;image/webp;image/vnd.microsoft.icon;image/x-portable-pixmap;image/x-portable-graymap;image/x-portable-bitmap;image/x-dds;
 Type=Application
 Icon=krita
 Categories=Qt;KDE;Office;Graphics;
